--- a/author.html
+++ b/author.html
@@ -3,45 +3,66 @@
     <head>
         <title>Author Entries</title>
     </head>
- 
-<body>
+ <body>
+    <h2>Author entry by Khaja Nayab Rasool Shaik</h2>
+    <form>
+        <label for="hiddenauthor">The hidden author name</label>
+        <input type ="password" id="hiddenauthor" value="Dickens" min=10 max=50 step=2 value=30> <br>
 
-<h2>Author entry by Khaja Nayab Rasool Shaik</h2>
+        <label for="guessauthor">Guess the author</label>
+        <input type ="text" id="guessauthor" autofocus> <br>
 
-<form>
-    <label for="hiddenauthor">The hidden author name</label>
-    <input type ="password" id="hiddenauthor" value="Dickens" min=10 max=50 step=2 value=30> <br>
+        <input type="button" onclick="checkAuthor()" value="Check the guess">
+    </form>
 
-    <label for="guessauthor">Guess the author</label>
-    <input type ="text" id="guessauthor" autofocus> <br>
+    <p id="result"></p>
 
-    <input type="button" onclick="checkAuthor()" value="Check the guess">
-</form>
+    <div class="img" onclick="selectImage()">
+        <img src="ajmer city.jpg" alt="Ajmer City" id="images" width="100" height="100" >
+    </div>
 
-<p id="result"></p>
+    <script> 
+        let good =0;
+        let oops =0;
 
-<script> 
-   let good =0;
-   let oops =0;
+        function checkAuthor(){
+            console.log("Getting form values")
+            hiddenauthor = document.getElementById("hiddenauthor").value;
+            guessauthor = document.getElementById("guessauthor").value;
 
-   function checkAuthor(){
-        console.log("Getting form values")
-        hiddenauthor = document.getElementById("hiddenauthor").value;
-        guessauthor = document.getElementById("guessauthor").value;
+            if(hiddenauthor === guessauthor){
+                good++;
+                alert("You got it right");
+            }
+            else{
+                oops++;
+                alert("Sorry");
+            }
 
-        if(hiddenauthor === guessauthor){
-            good++;
-            alert("You got it right");
+            result = document.getElementById("result");
+            result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
         }
-        else{
-            oops++;
-            alert("Sorry");
+        let useImage = 1;
+
+        function selectImage(){
+            switch(useImage){
+                case 1:
+                    document.getElementById("images").src = 'hyderabad city.jpg';
+                    useImage = 2;
+                    break;
+                case 2:
+                    document.getElementById("images").src = 'kolkata city.jpg';
+                    useImage = 3;
+                    break;
+                case 3:
+                    document.getElementById("images").src = 'ajmer city.jpg';
+                    useImage = 1;
+                    break;
+                default:
+                    break;
+            }
         }
+    </script>
 
-        result = document.getElementById("result");
-        result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
-}
-</script>
-
-</body>
+  </body>
 </html> 
