--- a/author.html
+++ b/author.html
@@ -17,10 +17,6 @@
 
     <p id="result"></p>
 
-    <div class="img" onclick="selectImage()">
-        <img src="ajmer city.jpg" alt="Ajmer City" id="images" width="100" height="100" >
-    </div>
-
     <script> 
         let good =0;
         let oops =0;
@@ -41,7 +37,16 @@
 
             result = document.getElementById("result");
             result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
-        }
+        }        
+    </script>
+
+    <h2>Image Changes</h2>
+
+    <div class="img" onclick="selectImage()">
+        <img src="ajmer city.jpg" alt="Ajmer City" id="images" width="100" height="100" >
+    </div>
+
+    <script>
         let useImage = 1;
 
         function selectImage(){
