--- a/tips.html
+++ b/tips.html
@@ -6,7 +6,7 @@
  
 <body>
 
-    <h2>Tips</h2>
+    <h2>Khaja Nayab Rasool Shaik shows tip amounts</h2>
 
     <form>
         <label for="baseAmount">Enter base amount</label>
