--- a/tips.html
+++ b/tips.html
@@ -56,7 +56,7 @@
             console.log("Getting form values")
             baseAmount = parseFloat(document.getElementById("baseAmount").value)
             tipPercent = parseFloat(document.getElementById("tipPercent").value)
-            total = document.getElementById("operations")
+            total = document.getElementById("operations");
 
             if(document.getElementById("sum").checked){
                 total.innerHTML= "sum of "+ baseAmount +" and "+ tipPercent +" is "+(baseAmount + tipPercent)
@@ -72,5 +72,5 @@
         }
     </script>
 
-</body>
+  </body>
 </html> 
