--- a/author.html
+++ b/author.html
@@ -2,6 +2,19 @@
 <html>
     <head>
         <title>Author Entries</title>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        
     </head>
  <body>
     <h2>Author entry by Khaja Nayab Rasool Shaik</h2>
@@ -25,16 +38,21 @@
             console.log("Getting form values")
             hiddenauthor = document.getElementById("hiddenauthor").value;
             guessauthor = document.getElementById("guessauthor").value;
+            result = document.getElementById("result");
 
             if(hiddenauthor === guessauthor){
                 good++;
                 alert("You got it right");
             }
+            else if(oops == 7){
+                alert("Sorry, ran out of guesses");
+                result.innerHTML = "Sorry, ran out of guesses";
+                document.getElementById("button") = 'hidden';
+            }
             else{
                 oops++;
                 alert("Sorry");
             }
-
             result = document.getElementById("result");
             result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
         }        
